Made major changes, added content and valid images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Chciałbyś odświeżyć wygląd książki oryginalną zakładką? Na ścianie jest zbyt wiele miejsca? Twoje buty straciły kolor? Poradzimy coś na to!">
+    content="Twój kask jest po prostu zwyczajny? Bak motocykla prosi się o dodatkowe kolory? Napisz, a coś na to poradzimy!">
   <meta name="keywords"
-    content="malarstwo, aerograf, rysunek, lakierowanie, malowanie, sztuka, dzieło artystyczne, lakierowanie motocykli, malowanie butów, odnowa kasków, zakładki, tworzenie zakładek, breloki, ręczne wykonanie">
-  <title>Nietypowa Sowa - Aerograf i malarstwo</title>
+    content="artysta, aerograf, lakiernictwo, malowanie, sztuka, dzieło artystyczne, lakierowanie motocykli, motocykle, kaski, odnowa kasków, upiększanie">
+  <title>Nietypowa Sowa - Aerograf</title>
   <link rel="shortcut icon" type="image/png" href="favicon-light.png" media="(prefers-color-scheme: light)" />
   <link rel="shortcut icon" type="image/png" href="favicon-dark.png" media="(prefers-color-scheme: dark)" />
   <link rel="manifest" href="/manifest.json">
