--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <link rel="shortcut icon" type="image/png" href="favicon-light.png" media="(prefers-color-scheme: light)" />
   <link rel="shortcut icon" type="image/png" href="favicon-dark.png" media="(prefers-color-scheme: dark)" />
   <link rel="manifest" href="/manifest.json">
-  <link rel="stylesheet" href="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Sour+Gummy&family=Lavishly+Yours:wght@300;400;500;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 </head>
 
