Made minor style improves, updated whole structure and files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Twój kask jest po prostu zwyczajny? Bak motocykla prosi się o dodatkowe kolory? Napisz, a coś na to poradzimy!">
   <meta name="keywords"
-    content="artysta, aerograf, lakiernictwo, malowanie, sztuka, dzieło artystyczne, lakierowanie motocykli, motocykle, kaski, odnowa kasków, upiększanie">
+    content="airbrush, aerograf, lakiernictwo, rysowanie aerografem, malowanie aerografem, dzieło artystyczne, lakierowanie motocykli, airbrush na zamówienie, custom airbrush, aerograf na odzieży, artysta airbrush, airbrush graffiti, dekoracja aerografem, sztuka aerografowa, technika airbrush, malarstwo aerografowe, odnowa kasków">
   <title>Nietypowa Sowa - Aerograf</title>
   <link rel="shortcut icon" type="image/png" href="favicon-light.png" media="(prefers-color-scheme: light)" />
   <link rel="shortcut icon" type="image/png" href="favicon-dark.png" media="(prefers-color-scheme: dark)" />
