Updated routing, implemented suspense and used helmet for better seo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Twój kask jest po prostu zwyczajny? Bak motocykla prosi się o dodatkowe kolory? Napisz, a coś na to poradzimy!">
+    content="Twój kask jest po prostu zwyczajny? Bak motocykla prosi się o dodatkowe kolory? Napisz, a coś na to poradzę! Oferuję profesjonalne malowanie aerografem na zamówienie.">
   <meta name="keywords"
     content="airbrush, aerograf, lakiernictwo, rysowanie aerografem, malowanie aerografem, dzieło artystyczne, lakierowanie motocykli, airbrush na zamówienie, custom airbrush, aerograf na odzieży, artysta airbrush, airbrush graffiti, dekoracja aerografem, sztuka aerografowa, technika airbrush, malarstwo aerografowe, odnowa kasków">
-  <title>Nietypowa Sowa - Aerograf</title>
+  <meta property='og:title' content='Aerograf - Lakiernictwo - Sztuka | Nietypowa Sowa'>
+  <meta property='og:description'
+    content='Chcesz, aby Twój kask lub motocykl zyskały unikalny wygląd? Skontaktuj się ze mną i zamów usługe na miarę swoich potrzeb!'>
+  <meta property='og:type' content='website'>
+  <meta property='og:url' content='https://nietypowa-sowa.pl'>
+  <link rel='canonical' href='https://nietypowa-sowa.pl'>
+  <title>Aerograf - Lakiernictwo - Sztuka | Nietypowa Sowa</title>
   <link rel="shortcut icon" type="image/png" href="favicon-light.png" media="(prefers-color-scheme: light)" />
   <link rel="shortcut icon" type="image/png" href="favicon-dark.png" media="(prefers-color-scheme: dark)" />
   <link rel="manifest" href="/manifest.json">
